--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -66,7 +66,7 @@ input[type=submit]{
     outline: none;
     border-radius: 2rem;
     text-align: center;
-    background-color: #009BD6;
+    background-color: #009bd6;
     margin-bottom: 40px;
 }
 
