--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -24,7 +24,7 @@ li,
 a,
 h2 {
     text-decoration: none;
-    font-weight: 100;
+    font-weight: 200;
 }
 
 /*HOME PAGE LOGIN*/
@@ -45,6 +45,10 @@ h2 {
     padding: 40px;
     border-radius: 6%;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.box-form a{
+    font-size: 1.5rem;
 }
 
 input{
@@ -111,8 +115,8 @@ header {
 
 }
 
-header h2{
-    font-size: 2rem;
+header h2 a{
+    font-size: 4rem;
     color: white;
 }
 
@@ -128,6 +132,8 @@ nav ul li {
 
 nav a{
     color: white;
+    text-transform: uppercase;
+    padding: 10px;
 }
 
 
