--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -239,6 +239,24 @@ a:hover {
 
 }
 
+.arrow {
+    display: flex;
+    justify-content: center;
+    font-size: 6rem;
+    align-items: flex-end;
+    height: 20%;
+}
+
+.arrow a {
+    opacity: 0.2;
+    color: #F8F8F8;
+}
+
+.arrow a:hover {
+    opacity: 0.6;
+    transition: 0.6s ease-in;
+}
+
 @keyframes drop {
     0% {
         opacity: 0;
@@ -255,6 +273,19 @@ a:hover {
 
 .tiles-section{
     display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.tiles-section h2{
+    font-size: 4rem;
+    color: #262626;
+}
+
+.tiles{
+    display: flex;
     justify-content: space-around;
     margin: 50px 0;
 }
@@ -262,6 +293,15 @@ a:hover {
 .tile{
     border-radius: 15%;
     background-color: #009bd6;
+}
+
+.tile a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 2rem;
+    padding: 10px;
+    color: white;
 }
 
 .fa-file-contract,
@@ -276,7 +316,7 @@ a:hover {
 .fa-laptop{
     font-size: 10rem;
     color: white;
-    padding: 60px;
+    padding: 70px 60px;
 }
 
 /* tables */
