--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -325,6 +325,12 @@ a:hover {
     box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
 }
 
+.header-table h1{
+    font-size: 4rem;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
 .fl-table {
     border-radius: 5px;
     font-size: 12px;
@@ -361,6 +367,15 @@ a:hover {
 
 .fl-table tr:nth-child(even) {
     background: #F8F8F8;
+}
+
+.back-section{
+    margin: 20px 0 50px 0;
+}
+
+.back-section a{
+    font-size: 2rem;
+    padding: 20px;
 }
 
 /* Responsive */
