--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -378,6 +378,36 @@ a:hover {
     padding: 20px;
 }
 
+input:focus {
+    outline-offset: -2px;
+}
+
+#searchInput {
+    width: 18%;
+
+    border: 1px solid #000;
+    border-radius: 30px;
+    font-size: 16px;
+    background-color: white;
+    background-image:url('https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/search-24.png');
+
+    background-position: 10px 7px;
+    background-repeat: no-repeat;
+    padding: 8px 20px 8px 40px;
+    -webkit-transition: width 0.8s ease-in-out;
+    transition: width 0.8s ease-in-out;
+    outline: none;
+    opacity: 0.9;
+
+}
+
+.searchbar-section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 40px;
+}
+
 /* Responsive */
 
 @media (max-width: 767px) {
