--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -401,11 +401,65 @@ input:focus {
 
 }
 
+
+/*searchbar invoice*/
+
 .searchbar-section{
+    width: 90vw;
+    margin: auto;
+}
+
+input[type="search"],
+select{
+    background-color: white;
+    border-radius: 0.25rem;
+    border: 1px solid #e0e0e5;
+    font-size: 2rem;
+    line-height: 2;
+    padding: 0.375rem 1.25rem;
+    -webkit-transition: border-color 0.2s;
+    -moz-transition: border-color 0.2s;
+    transition: border-color 0.2s;
+}
+
+input[type="search"]:focus,
+select:focus{
+    transition: all 0.5s;
+    box-shadow: 0 0 10px #00A6FB;
+    border-color: #00A6FB;
+    outline: none;
+}
+
+.select-width{
+    min-width: 70px;
+}
+
+label{
+    font-size: 1.5rem;
+    margin-right: 10px;
+}
+
+.submit-button{
+    margin-top: 40px;
+
+}
+input[type="submit"]{
+    font-size: 1.5rem;
+    color: white;
+    padding: 10px 20px;
+}
+
+input.search-field,
+select.search-field{
+    font-size: 1.3rem;
+    height: 50px;
+    margin-top: 0;
+}
+
+.search-form{
     display: flex;
+    justify-content: space-around;
     align-items: center;
-    justify-content: center;
-    margin-bottom: 40px;
 }
 
 /* Responsive */
