Add searchbars filters equipment

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -408,6 +408,11 @@ input:focus {
     margin: auto;
 }
 
+.searchbar-section-equipment{
+    width: 30vw;
+    margin: auto;
+}
+
 .searchbar-section-documents{
     width: 40vw;
     margin: auto;
