--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -418,6 +418,11 @@ input:focus {
     margin: auto;
 }
 
+.searchbar-section-license{
+    width: 40vw;
+    margin: auto;
+}
+
 input[type="search"],
 select{
     background-color: white;
