--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -149,6 +149,11 @@ a:hover {
     opacity: 0.5;
 }
 
+.fa-file-pdf{
+    font-size: 2rem;
+    margin-left: 40px;
+}
+
 @media(max-width: 800px) {
     header {
         flex-direction: column;
